--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: "2"
 x-redash-environment: &redash-environment
+
+  ## redash details
   REDASH_LOG_LEVEL: ${REDASH_LOG_LEVEL}
   REDASH_REDIS_URL: ${REDASH_REDIS_URL}
   FABRIQ_HOST: ${FABRIQ_HOST}
@@ -7,28 +9,25 @@ x-redash-environment: &redash-environment
   REDASH_RATELIMIT_ENABLED: ${REDASH_RATELIMIT_ENABLED}
   REDASH_HOST : "${REDASH_HOST}"
   WORKERS_COUNT: ${WORKERS_COUNT}
+  PG_DATABASE_URL: ${DATABASE_URL}
+  GRAPHQL_URL: ${GRAPHQL_URL}
   
   ## hasura details
   HASURA_GRAPHQL_DATABASE_URL: "${DATABASE_URL}"
-  HASURA_GRAPHQL_METADATA_DATABASE_URL: ${DATABASE_URL}
-  PG_DATABASE_URL: ${DATABASE_URL}
+  HASURA_GRAPHQL_METADATA_DATABASE_URL: ${DATABASE_URL}  
   HASURA_GRAPHQL_ENABLE_CONSOLE: "true" 
   HASURA_GRAPHQL_DEV_MODE: "true"
   HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
   HASURA_GRAPHQL_ADMIN_SECRET: ${HASURA_GRAPHQL_ADMIN_SECRET}
-  GRAPHQL_URL: ${GRAPHQL_URL}
+  
 
   ## chatai and sites details
   SITE_TRACKER_HOST: ${FABRIQ_HOST}
   GPT_URL : "${GPT_URL}"
 
-  # airbyte details
-  AIRBYTE_API_URL: "${AIRBYTE_API_URL}"
-  AIRBYTE_API_KEY: "${AIRBYTE_API_KEY}"
-
 services:
   openapi:
-    image: gcr.io/kickoff19-237210/fabriq-openai-dev:v12july2023
+    image: gcr.io/kickoff19-237210/fabriq-openai-dev:v5-14july2023 
     container_name: openapi
     ports:
       - "5002:5002"
@@ -36,7 +35,7 @@ services:
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
   elt-wrapper:
-    image: gcr.io/kickoff19-237210/fabriq-elt-warapper:v30jun2023
+    image: gcr.io/kickoff19-237210/fabriq-elt-warapper:v14july2023
     container_name: elt-wrapper
     ports:
       - "5555:5555"
