Platform: docs and org and user create script added

--- a/sample.env
+++ b/sample.env
@@ -3,3 +3,7 @@ FABRIQ_DB_HOST=host
 FABRIQ_DB_PORT=port
 FABRIQ_DB_USER=username
 FABRIQ_DB_PASSWORD=password
+FABRIQ_ORG=org name
+FABRIQ_ORG_SLUG=org_slug
+FABRIQ_EMAIL=email
+FABRIQ_USER_NAME=user_name
