--- a/sample.env
+++ b/sample.env
@@ -18,3 +18,10 @@ FABRIQ_ORG=org name
 FABRIQ_ORG_SLUG=org_slug
 FABRIQ_EMAIL=email
 FABRIQ_USER_NAME=user_name
+
+
+SLACK_BOT_TOKEN=""
+SLACK_SIGNING_SECRET=""
+SLACK_BOT_USER_ID=""
+BACK_END_URL=https://yourdomain/
+USER_API_KEY=
