--- a/transforms/dbt-fabriq-web/dbt_project.yml
+++ b/transforms/dbt-fabriq-web/dbt_project.yml
@@ -27,6 +27,9 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 vars:
+  # set to true if the HTML5 media element context schema is enabled
+  snowplow__enable_whatwg_media: true
+  # set to true if the HTML5 video element context schema is enabled
   snowplow_web:
     snowplow__atomic_schema: 'atomic'
     snowplow__enable_iab: false
@@ -34,4 +37,3 @@ vars:
     snowplow__enable_yauaa: true
     snowplow__start_date: '2023-08-01'
     snowplow__enable_load_tstamp: false
-
